# 2025-pydata-book

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: ex2.xlsx  mydata.h5  mydata.sqlite
ipynb/: _quarto.yml  chapter_2.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  index.qmd  maintenance.ipynb
py/: datasets.py
